[tool.poetry]
name = "eqflow"
version = "0.1.0"
description = ""
authors = ["Jeff Shen <shenjeff@princeton.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
distrax = "^0.1"
equinox = "^0.9"
jax = "^0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
